# ni-neutrino-plugins

./: .gitignore  LICENSE  Makefile  Makefile.am  README  README.de.md  README.en.md  README.md  acinclude.m4  autogen.sh  bmps.c  bmps.h  branch.txt  build.sh  color.h  config.lua  configure.ac  convert.list  cooliTSclimax.cpp  coolithek.cfg  coolithek.lua  current.h  fb_display.c  fb_display.h  getrc.c  gfx.c  gfx.h  gif.c  gif.h  gifdecomp.c  gifdecomp.h  globals.h  http.c  http.h  icons.h  input.c  input.h  inputd.c  inputd.h  io.c  (+67 more)
FritzCallMonitor/: FritzCallMonitor.cfg  FritzCallMonitor.cpp  FritzCallMonitor.h  Makefile.am  connect.cpp  connect.h  fritzcallmonitor.init
FritzInfoMonitor/: FritzInfoMonitor.cpp  Makefile.am  connect.cpp  connect.h  framebuffer.cpp  framebuffer.h  globals.h  parser.cpp  parser.h  phonebook.cpp  rc.cpp  rc.h  submenu.cpp
asc2uni/: asc2uni.c  (+1 more)
cooliTSclimax/: .gitignore  Makefile.am
emmrd/: Makefile.am  emmrd.init
initfb/: Makefile.am  initfb.c  initfb.init
input/: .gitignore  Makefile.am  gfx.c  gfx.h  icons.h  input.c  input.h  inputd.c  inputd.h  io.c  io.h  readme.txt  resize.h  text.c
logomask/: .gitignore  Makefile.am  gfx.c  io.c  io.h  logomask.c  logomask.h  logomask.sh  logoset.c  logoset.cfg  logoset.h  starter_logomask.c  text.h
logoview/: .gitignore  Makefile.am  README  jpeg.cpp  logoview.cpp  logoview.h
oscammon/: Makefile.am  oscammon.c  oscammon.cfg  oscammon.conf  oscammon.h  rc_device.c
scripts-lua/plugins/: Makefile.am
scripts-lua/plugins/2webTVxml/: 2webTVxml.cfg  2webTVxml.lua  Makefile.am
scripts-lua/plugins/EPGfilter/: Makefile.am
scripts-lua/plugins/EPGscan/: EPGscan.sh  Makefile.am
scripts-lua/plugins/EPGscan-setup/: Makefile.am
scripts-lua/plugins/FritzInfoMonitor-setup/: FritzInfoMonitor-setup.lua  Makefile.am
scripts-lua/plugins/LocalTV/: LocalTV.lua  Makefile.am
scripts-lua/plugins/add-locale/: Makefile.am
scripts-lua/plugins/ard_mediathek/: Makefile.am  ard_mediathek.lua
scripts-lua/plugins/browser/: browser.lua
scripts-lua/plugins/epgfilter/: Makefile.am  epgfilter.cfg
scripts-lua/plugins/favorites2bin/: Makefile.am  favorites2bin.lua
scripts-lua/plugins/freeze/: Makefile.am  freeze.cfg  freeze.lua
scripts-lua/plugins/heizoelpreise/: Makefile.am  heizoelpreise.cfg  heizoelpreise.lua
scripts-lua/plugins/logoupdater/: Makefile.am  logoupdater.lua
scripts-lua/plugins/mediathek/: Makefile.am  README.md  neutrino-mediathek.lua
scripts-lua/plugins/mediathek-04beta7/: neutrino-mediathek.lua
scripts-lua/plugins/mtv/: Makefile.am  mtv.lua
scripts-lua/plugins/n_libraries/: Makefile.am  n_gui.lua  n_helpers.lua
scripts-lua/plugins/netzkino/: Makefile.am  netzkino.cfg  netzkino.lua
scripts-lua/plugins/openvpn-setup/: Makefile.am  ovpn.init
scripts-lua/plugins/plutotv-update/: Makefile.am  plutotv-update.cfg  plutotv-update.lua
scripts-lua/plugins/plutotv-vod/: Makefile.am  plutotv-vod.cfg  plutotv-vod.lua
scripts-lua/plugins/rcu_switcher/: Makefile.am  README.md  rcu_switcher.cfg  rcu_switcher.init  rcu_switcher.lua
scripts-lua/plugins/replay/: Makefile.am  replay.cfg  replay.lua
scripts-lua/plugins/rss/: Makefile.am  rss.cfg  rss.lua
scripts-lua/plugins/settingsupdater/: settingsupdater.lua
scripts-lua/plugins/spiegel-tv-doc/: Makefile.am  spiegel_tv_doc.cfg  spiegel_tv_doc.lua
scripts-lua/plugins/stb-startup/: Makefile.am  stb-startup.lua
scripts-lua/plugins/stb_backup/: stb-backup.cfg  stb-backup.lua
scripts-lua/plugins/stb_flash/: stb-flash.cfg  stb-flash.lua
scripts-lua/plugins/stb_local-flash/: stb-local-flash.cfg  stb-local-flash.lua
scripts-lua/plugins/stb_log/: stb-log.cfg
scripts-lua/plugins/stb_move/: stb-move.cfg  stb-move.lua
scripts-lua/plugins/stb_plugins/: stb-plugins.lua
scripts-lua/plugins/stb_restore/: stb-restore.lua
scripts-lua/plugins/stb_shell/: stb-shell.lua
scripts-lua/plugins/stb_startup/: Makefile.am  stb-startup.cfg  stb-startup.conf  stb-startup.lua  stb-startup_vuplus.cfg  stb-startup_vuplus.lua
scripts-lua/plugins/stb_startup-ddt/: Makefile.am  stb-startup.lua
scripts-lua/plugins/tierwelt-tv/: Makefile.am  tierwelt_tv.cfg  tierwelt_tv.lua
scripts-lua/plugins/userbouquets/: Makefile.am
scripts-lua/plugins/webradio/: 80s80s.xml  90s90s.xml  Makefile.am  stompfm.xml
scripts-lua/plugins/webtv/: LocalTVEpg.lua  Makefile.am  best_bitrate_m3u8.lua  filmon.lua  filmon.xml  plutotv-epgmap.xml  plutotv.lua  plutotv.xml  plutotv_de.xml  rakutentv.xml  samsungtv.m3u  samsungtvplus.xml  samsungtvplus_de.xml  streamlink.lua  yt_live.lua  yt_live.xml
scripts-lua/plugins/zdfhbbtv/: Makefile.am  zdfhbbtv.cfg  zdfhbbtv.lua
scripts-sh/plugins/: Makefile.am
shellexec/: .gitignore  Makefile.am  current.h  fb_display.h  flex_user.conf  flex_usr.conf  gfx.c  icons.h  io.c  io.h  rc_device.c  readme.de  resize.c  shellexec.c  shellexec.cfg  shellexec.conf  shellexec.conf.in  shellexec.h  starter.c  text.c
stbup/: Makefile.am  stbup.c  stbup.init
sysinfo/: Makefile.am  fb_display.c  fe_infos.c  fe_infos.h  gfx.c  gfx.h  icons.h  io.c  io.h  mmcblk_info.h  mtddevice_info.c  mtddevice_info.h  png_helper.cpp  resize.c  start.c  sysinfo.c  sysinfo.h  text.c
turnoff_power/: Makefile.am  turnoff_power.init
tuxcal/: .gitignore  Makefile.am  tuxcal.c  tuxcal.cfg  tuxcal.conf  tuxcal.h  tuxcal.notify
tuxcal/daemon/: .gitignore  Makefile.am  tuxcald  tuxcald.c  tuxcald.h  tuxcald.init
tuxcom/: .gitignore  Makefile.am  readme_deu.txt  readme_eng.txt  tuxcom.c  tuxcom.cfg  tuxcom.h
tuxmail/: .gitignore  Makefile.am  rc_device.c  tuxmail.c  tuxmail.cfg  tuxmail.h
tuxmail/daemon/: Makefile.am  tuxmaild  tuxmaild.h  tuxmaild.init
tuxwetter/: .gitignore  Makefile.am  bmps.c  bmps.h  build.sh  convert.list  fb_display.c  fb_display.h  gfx.c  gif.c  gif.h  gifdecomp.c  gifdecomp.h  http.c  icons.h  io.c  io.h  jpeg.c  jpeg.h  parser.c  parser.h  php.c  pngw.cpp  rc_device.c  readme.txt  resize.c  resize.h  starter.c  text.c  text.h  tuxwetter.c  tuxwetter.conf  tuxwetter.h  tuxwetter.mcfg
tuxwetter/icons/: Makefile.am
(+292 files in other folders)
