SUBDIRS =

if ENABLE_2WEBTVXML
SUBDIRS += 2webTVxml
endif
if ENABLE_ADD_LOCALE
SUBDIRS += add-locale
endif
if ENABLE_ARD_MEDIATHEK
SUBDIRS += ard_mediathek
endif
if ENABLE_EPGFILTER
SUBDIRS += epgfilter
endif
if ENABLE_EPGSCAN_SETUP
if ENABLE_EPGSCAN
SUBDIRS += EPGscan-setup
endif
endif
if ENABLE_FAVORITES2BIN
SUBDIRS += favorites2bin
endif
if ENABLE_FRITZINFOMONITOR_SETUP
if ENABLE_FRITZINFOMONITOR
SUBDIRS += FritzInfoMonitor-setup
endif
endif
if ENABLE_HEIZOELPREISE
SUBDIRS += heizoelpreise
endif
if ENABLE_LOCALTV
SUBDIRS += LocalTV
endif
if ENABLE_LOGOUPDATER
SUBDIRS += logoupdater
endif
if ENABLE_MTV
SUBDIRS += mtv
endif
if ENABLE_NETZKINO
SUBDIRS += netzkino
endif
if ENABLE_OPENVPN_SETUP
SUBDIRS += openvpn-setup
endif
if ENABLE_RCU_SWITCHER
SUBDIRS += rcu_switcher
endif
if ENABLE_RSS
SUBDIRS += rss
endif
if ENABLE_SPIEGEL_TV_DOC
SUBDIRS += spiegel-tv-doc
endif
if ENABLE_STB_STARTUP
SUBDIRS += stb_startup-ddt
endif
if ENABLE_TIERWELT_TV
SUBDIRS += tierwelt-tv
endif
if ENABLE_USERBOUQUETS
SUBDIRS += userbouquets
endif
if ENABLE_WEBCHANNELS
SUBDIRS += webradio
SUBDIRS += webtv
endif
